deploy: 4886d52f764f56d5b85d4fdbfc176526b78d6ef3

--- a/components/abutton/index.html
+++ b/components/abutton/index.html
@@ -18,9 +18,7 @@
     <script>
       //! umi version: 3.2.3
     </script>
-    <title>
-      Foo&#x7EC4;&#x4EF6;-&#x6D4B;&#x8BD5;&#x81EA;&#x52A8;&#x53D1;&#x5E03;
-    </title>
+    <title>AButton</title>
   </head>
   <body>
     <div id="root"></div>
